--- a/PRSER/U2/P2. Multihilo/config.properties
+++ b/PRSER/U2/P2. Multihilo/config.properties
@@ -1,4 +1,4 @@
-inputFolder=src/main/resources/input
-outputFolder=src/main/resources/output
-maxWidth=100
-maxHeight=100
+inputFolder=files/input
+outputFolder=files/output
+maxWidth=1080
+maxHeight=720
