--- a/HLC/U4/Ejemplo/ejemploAutenticacionMatematica/.project
+++ b/HLC/U4/Ejemplo/ejemploAutenticacionMatematica/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hlc-ud04-ejerciciobase</name>
+	<name>hlc-ud04-ejemplo</name>
 	<comment></comment>
 	<projects>
 	</projects>
